# kanban

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
kanban-core/: Cargo.toml
kanban-core/src/: init.rs  main.rs  schema.rs  ui.rs
kanban-core/src/actions/: add_task.rs  delete_task.rs  edit_task.rs  list_board.rs  mod.rs  move_task.rs
