[package]
name = "kanban"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
dialoguer = "0.11"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
colored = "2"

[dev-dependencies]
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
